--- a/index.html
+++ b/index.html
@@ -3,27 +3,23 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover"/>
-<title>Poster AR · Estable</title>
+<title>Poster AR · Fijo</title>
 <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
 <style>
   html,body{margin:0;height:100%;background:#000}
-  /* Cámara detrás del canvas */
   video[playsinline]{
     position:fixed!important;inset:0!important;width:100vw!important;height:100vh!important;
     object-fit:cover!important;z-index:0!important;background:#000!important
   }
-  /* Canvas WebGL delante de la cámara */
   a-scene{position:fixed!important;inset:0!important;z-index:2!important}
   canvas.a-canvas{position:fixed!important;inset:0!important;z-index:3!important;pointer-events:none}
-  /* UI */
   .dbg{position:fixed;right:8px;bottom:8px;background:#0f1522cc;border:1px solid #22324d;border-radius:8px;
        padding:8px 10px;font:12px/1.4 system-ui,Segoe UI,Roboto;color:#cfe3ff;pointer-events:none;max-width:80vw}
   .ok{color:#7de0ca}.warn{color:#ffce7a}.err{color:#ff9a9a}
   .sound{position:fixed;left:12px;bottom:12px;z-index:5;background:#111a;border:1px solid #2a3a58;
          color:#eaf2ff;padding:10px 12px;border-radius:12px;font:14px/1.2 system-ui}
   .sound[hidden]{display:none}
-  #canvases{position:fixed;left:-9999px;top:-9999px;visibility:hidden}
 </style>
 </head>
 <body>
@@ -33,10 +29,7 @@
   loading-screen="enabled:false"
   mindar-image="uiLoading: yes; maxTrack:1; warmupTolerance:2; filterMinCF:0.0001; filterBeta:0.001;"
   style="width:100vw;height:100vh">
-
   <a-camera look-controls="enabled:false"></a-camera>
-
-  <!-- Anchors (solo montamos en el primero que detecte) -->
   <a-entity id="a0" mindar-image-target="targetIndex:0"></a-entity>
   <a-entity id="a1" mindar-image-target="targetIndex:1"></a-entity>
   <a-entity id="a2" mindar-image-target="targetIndex:2"></a-entity>
@@ -45,66 +38,56 @@
   <a-entity id="a5" mindar-image-target="targetIndex:5"></a-entity>
   <a-entity id="a6" mindar-image-target="targetIndex:6"></a-entity>
   <a-entity id="a7" mindar-image-target="targetIndex:7"></a-entity>
+  <a-assets id="assets" timeout="60000">
+    <img id="overlayImg"/>
+    <video id="v1" playsinline webkit-playsinline muted loop preload="auto" crossorigin="anonymous"></video>
+    <video id="v2" playsinline webkit-playsinline muted loop preload="auto" crossorigin="anonymous"></video>
+    <video id="v3" playsinline webkit-playsinline muted loop preload="auto" crossorigin="anonymous"></video>
+  </a-assets>
 </a-scene>
 
 <button id="btnSound" class="sound" hidden>🔊 Activar sonido</button>
 <div id="dbg" class="dbg">Cargando…</div>
-<div id="canvases"></div>
 
 <script>
 (function(){
   const dbg = document.getElementById('dbg'), btnSound = document.getElementById('btnSound');
   const log = (m,cls='')=>{ dbg.innerHTML=(cls?`<span class="${cls}">${m}</span>`:m)+'<br>'+dbg.innerHTML; console.log('[AR]',m); };
-  window.onerror = (msg, src, line, col)=>{ log('JS ERROR: '+msg+' @'+(src||'')+':'+line+':'+col,'err'); };
+  const Q = new URLSearchParams(location.search);
 
-  const q = new URLSearchParams(location.search);
-  const t  = q.get('t') || '';
-  const d  = q.get('d') || '';
-  const pw = +(q.get('pw')||2481), ph=+(q.get('ph')||3508), H=ph/pw;
-  const overlayDebug = q.get('overlayDebug')==='1';
-  const debugRects = q.get('debugRects')==='1';
-  const dx = +(q.get('dx')||0), dy=+(q.get('dy')||0), sc=+(q.get('scale')||1), rot=+(q.get('rot')||0);
-  const eqVis = q.get('eq')==='1';
+  // -------- Params --------
+  const t  = Q.get('t') || '';
+  const d  = Q.get('d') || ''; // overlay PNG/JPG
+  const pw = +(Q.get('pw')||2481), ph=+(Q.get('ph')||3508), H=ph/pw;
+  const dx = +(Q.get('dx')||0), dy=+(Q.get('dy')||0), sc=+(Q.get('scale')||1), rot=+(Q.get('rot')||0);
+  const overlayDebug = Q.get('overlayDebug')==='1';
+  const debugRects = Q.get('debugRects')==='1';
 
-  // slots de vídeo
-  const vSlots=[1,2,3].map(i=>({id:i,v:q.get('v'+i),x:+q.get('x'+i)||0,y:+q.get('y'+i)||0,w:+q.get('vw'+i)||0,h:+q.get('vh'+i)||0}))
+  const vSlots=[1,2,3].map(i=>({id:i,v:Q.get('v'+i),x:+Q.get('x'+i)||0,y:+Q.get('y'+i)||0,w:+Q.get('vw'+i)||0,h:+Q.get('vh'+i)||0}))
     .filter(s=>s.v&&s.w>0&&s.h>0);
 
-  // textos (canvas)
   const tSlots=[1,2,3,4,5].map(i=>{
-    const val=q.get('t'+i); if(!val) return null;
-    return {id:i,text:val,x:+q.get('xt'+i)||0,y:+q.get('yt'+i)||0,w:+q.get('wt'+i)||0,h:+q.get('ht'+i)||0,align:(q.get('ta'+i)||'center'),color:'#'+(q.get('tc'+i)||'000000')};
+    const val=Q.get('t'+i); if(!val) return null;
+    return {id:i,text:val,x:+Q.get('xt'+i)||0,y:+Q.get('yt'+i)||0,w:+Q.get('wt'+i)||0,h:+Q.get('ht'+i)||0,align:(Q.get('ta'+i)||'center'),color:'#'+(Q.get('tc'+i)||'000000')};
   }).filter(Boolean);
 
-  // audio y barra
-  const audioSrc=q.get('audio')||'';
-  const pbx=+(q.get('pbx')||300), pby=+(q.get('pby')||2640), pbw=+(q.get('pbw')||2060), pbh=+(q.get('pbh')||14);
-  const pbc='#'+(q.get('pbc')||'000000'), pbf='#'+(q.get('pbf')||'13d77a'), pkn='#'+(q.get('pkn')||'000000');
+  const audioSrc=Q.get('audio')||'';
+  const pbx=+(Q.get('pbx')||300), pby=+(Q.get('pby')||2640), pbw=+(Q.get('pbw')||2060), pbh=+(Q.get('pbh')||14);
+  const pbc='#'+(Q.get('pbc')||'000000'), pbf='#'+(Q.get('pbf')||'13d77a'), pkn='#'+(Q.get('pkn')||'000000');
 
   if(!t){ log('❗ Falta ?t=<URL .mind>','err'); return; }
-
   const scene=document.getElementById('scene');
   scene.setAttribute('mindar-image', `imageTargetSrc: ${t}; uiLoading: yes; autoStart: true; maxTrack:1; warmupTolerance:2; filterMinCF:0.0001; filterBeta:0.001;`);
   scene.addEventListener('loaded', ()=>{ try{ scene.renderer.setClearColor(0x000000,0); }catch(e){} });
-  log('Cargado .mind desde URL','ok');
 
-  // assets
-  const assets = document.createElement('a-assets');
-  assets.id='assets'; assets.setAttribute('timeout','60000'); scene.appendChild(assets);
-  if(d && !overlayDebug){
-    const img=document.createElement('img'); img.id='overlayImg'; img.crossOrigin='anonymous'; img.src=d; assets.appendChild(img);
-  }
-  const videoEls={};
-  vSlots.forEach(s=>{
-    const v=document.createElement('video');
-    v.id='v'+s.id; v.setAttribute('playsinline',''); v.setAttribute('webkit-playsinline','');
-    v.muted=true; v.loop=true; v.preload='auto'; v.crossOrigin='anonymous'; v.src=s.v;
-    assets.appendChild(v); videoEls[s.id]=v;
-  });
+  // -------- Assets --------
+  const overlayImg = document.getElementById('overlayImg');
+  if(d) { overlayImg.crossOrigin='anonymous'; overlayImg.src=d; }
+  const videos = {1:document.getElementById('v1'),2:document.getElementById('v2'),3:document.getElementById('v3')};
+  vSlots.forEach(s=>{ const v=videos[s.id]; v.src=s.v; });
 
-  let audioEl=null, userApproved=false, targetVisible=false;
-  if(audioSrc){ audioEl=new Audio(audioSrc); audioEl.crossOrigin='anonymous'; audioEl.preload='auto'; audioEl.loop=false; audioEl.volume=1.0; }
-
+  // -------- Utils --------
+  const THREE = AFRAME.THREE;
   const pxToUnits=(x,y,w,h)=>({wn:w/pw,hn:h/pw,cx:-0.5+(x+w/2)/pw,cy:(ph/pw)/2-(y+h/2)/pw});
 
   const makeRoot=()=>{
@@ -117,13 +100,34 @@
   };
 
   const buildOverlay=()=>{
-    const p=document.createElement('a-plane'); p.setAttribute('width',1); p.setAttribute('height',H); p.setAttribute('position','0 0 0.0');
-    if(!d||overlayDebug){
-      p.setAttribute('material','shader:flat; color:#00ffaa; opacity:0.25; transparent:true; side:double;');
-    }else{
-      p.setAttribute('material','shader:flat; src:#overlayImg; transparent:true; opacity:0; side:double;');
-      p.setAttribute('animation__fade','property:material.opacity;from:0;to:1;dur:350;easing:easeOutQuad;startEvents:show');
-    }
+    const p=document.createElement('a-plane');
+    p.setAttribute('width',1); p.setAttribute('height',H); p.setAttribute('position','0 0 0.0');
+    p.setAttribute('material','shader:flat; transparent:true; side:double; depthTest:false; opacity:1');
+    p.addEventListener('loaded', ()=>{
+      const mesh=p.getObject3D('mesh'); if(!mesh) return;
+      mesh.renderOrder=10; // debajo del vídeo y textos
+      if(overlayDebug || !d){
+        mesh.material.color.set('#00ffaa'); mesh.material.opacity=0.25;
+        log('Overlay DEBUG verde','ok');
+      } else {
+        // esperar a que cargue la imagen
+        if(overlayImg.complete && overlayImg.naturalWidth>0){
+          mesh.material.map = new THREE.Texture(overlayImg);
+          mesh.material.map.needsUpdate=true;
+          mesh.material.opacity=1;
+          mesh.material.needsUpdate=true;
+          log(`Overlay ${overlayImg.naturalWidth}×${overlayImg.naturalHeight} aplicado`,'ok');
+        } else {
+          overlayImg.addEventListener('load',()=>{
+            mesh.material.map = new THREE.Texture(overlayImg);
+            mesh.material.map.needsUpdate=true;
+            mesh.material.opacity=1;
+            mesh.material.needsUpdate=true;
+            log('Overlay cargado tras onload','ok');
+          },{once:true});
+        }
+      }
+    });
     return p;
   };
 
@@ -132,27 +136,25 @@
     const plane=document.createElement('a-plane');
     plane.setAttribute('width',wn); plane.setAttribute('height',hn);
     plane.setAttribute('position',`${cx} ${cy} 0.03`);
-    plane.setAttribute('material',`shader:flat; src:#v${s.id}; side:double;`);
-    plane.setAttribute('animation__pop','property:scale; from:0.96 0.96 1; to:1 1 1; dur:220; easing:easeOutQuad; startEvents:pop');
-    function cover(){ const mesh=plane.getObject3D('mesh'); const v=videoEls[s.id];
+    plane.setAttribute('material',`shader:flat; src:#v${s.id}; side:double; depthTest:false; opacity:1`);
+    plane.addEventListener('loaded', ()=>{ const mesh=plane.getObject3D('mesh'); if(mesh) mesh.renderOrder=20; });
+    function cover(){ const mesh=plane.getObject3D('mesh'); const v=videos[s.id];
       if(!mesh||!mesh.material||!mesh.material.map||!v||!v.videoWidth) return;
       const tex=mesh.material.map, vr=v.videoWidth/v.videoHeight, rr=s.w/s.h; let rx=1,ry=1,ox=0,oy=0;
       if(vr>rr){ rx=rr/vr; ry=1; ox=(1-rx)/2; } else { rx=1; ry=vr/rr; oy=(1-ry)/2; }
       tex.offset.set(ox,oy); tex.repeat.set(rx,ry); tex.needsUpdate=true; mesh.material.needsUpdate=true;
     }
     plane.addEventListener('materialtextureloaded',cover);
-    const v=videoEls[s.id]; if(v){ v.addEventListener('loadedmetadata',()=>{ v.play().catch(()=>{}); cover(); }, {once:true}); }
+    const v=videos[s.id]; if(v){ v.addEventListener('loadedmetadata',()=>{ v.play().catch(()=>{}); cover(); }, {once:true}); }
     if(debugRects){
-      const wire=document.createElement('a-plane');
-      wire.setAttribute('width',wn); wire.setAttribute('height',hn);
+      const wire=document.createElement('a-plane'); wire.setAttribute('width',wn); wire.setAttribute('height',hn);
       wire.setAttribute('position',`${cx} ${cy} 0.031`);
-      wire.setAttribute('material','shader:flat; color:#00ffa0; wireframe:true; transparent:true; opacity:0.9; side:double;');
+      wire.setAttribute('material','shader:flat; color:#00ffa0; wireframe:true; transparent:true; opacity:0.9; side:double;depthTest:false;');
       plane.appendChild(wire);
     }
     return plane;
   };
 
-  // ---- TEXTOS: canvas -> THREE.CanvasTexture (100% visible) ----
   function drawTextCanvas(text,color,align,wpx,hpx){
     const scale=2, cw=Math.max(64, Math.min(2048, Math.round(wpx*scale))), ch=Math.max(32, Math.min(1024, Math.round(hpx*scale)));
     const c=document.createElement('canvas'); c.width=cw; c.height=ch;
@@ -164,33 +166,30 @@
     while(min<=max){ const mid=(min+max>>1); ctx.font=family.replace('64px', mid+'px'); const m=ctx.measureText(text);
       if(m.width <= (cw-2*padX) && mid <= ch*0.9){ size=mid; min=mid+1; } else { max=mid-1; } }
     ctx.font=family.replace('64px', size+'px'); ctx.textBaseline='middle';
-    ctx.textAlign = (align==='left'?'left':align==='right'?'right':'center');
-    const x = (align==='left')? padX : (align==='right')? (cw-padX) : (cw/2); const y=ch/2;
-    ctx.fillText(text, x, y); return c;
+    ctx.textAlign=(align==='left'?'left':align==='right'?'right':'center');
+    const x=(align==='left')?padX:(align==='right')?(cw-padX):(cw/2); const y=ch/2;
+    ctx.fillText(text,x,y);
+    return c;
   }
   function buildTextPlane(s){
     const {wn,hn,cx,cy}=pxToUnits(s.x,s.y,s.w,s.h);
     const canvas = drawTextCanvas(s.text, s.color, s.align, s.w, s.h);
     const p=document.createElement('a-plane');
     p.setAttribute('width',wn); p.setAttribute('height',hn);
-    p.setAttribute('position', `${cx} ${cy} 0.12`); // por encima
-    p.setAttribute('material', `shader:flat; transparent:true; side:double; depthTest:false; opacity:0`);
-    p.setAttribute('animation__in','property:material.opacity; from:0; to:1; dur:280; easing:easeOutQuad; startEvents:show');
+    p.setAttribute('position', `${cx} ${cy} 0.12`);
+    p.setAttribute('material','shader:flat; transparent:true; side:double; depthTest:false; opacity:1');
     p.setAttribute('animation__slide','property:position; to:'+cx+' '+(cy+0.003)+' 0.12; dir:alternate; loop:true; dur:900; easing:easeInOutSine');
-    // asignar textura de canvas con THREE
-    p.addEventListener('loaded', ()=>{
+    p.addEventListener('object3dset', ()=>{
       try{
-        const mesh=p.getObject3D('mesh');
+        const mesh=p.getObject3D('mesh'); if(!mesh) return;
         const tex=new THREE.CanvasTexture(canvas);
-        tex.needsUpdate=true;
-        mesh.material.map=tex;
-        mesh.material.transparent=true;
-        mesh.material.needsUpdate=true;
+        mesh.material.map=tex; mesh.material.needsUpdate=true; mesh.renderOrder=30;
+        log('Texto '+s.id+' aplicado','ok');
       }catch(e){ log('Text texture err '+e,'err'); }
     });
     if(debugRects){
       const wire=document.createElement('a-plane'); wire.setAttribute('width',wn); wire.setAttribute('height',hn);
-      wire.setAttribute('position',`0 0 -0.001`); wire.setAttribute('material','shader:flat; color:#ffcc00; wireframe:true; transparent:true; opacity:0.8; side:double;');
+      wire.setAttribute('position',`0 0 -0.001`); wire.setAttribute('material','shader:flat; color:#ffcc00; wireframe:true; transparent:true; opacity:0.8; side:double;depthTest:false;');
       p.appendChild(wire);
     }
     return p;
@@ -200,29 +199,32 @@
     const {wn,hn,cx,cy}=pxToUnits(x,y,w,h);
     const g=document.createElement('a-entity'); g.setAttribute('position',`${cx-wn/2} ${cy} 0.09`);
     const bg=document.createElement('a-plane'); bg.setAttribute('width',wn); bg.setAttribute('height',hn);
-    bg.setAttribute('material',`shader:flat; color:${pbc}; transparent:true; opacity:0.9; side:double`);
+    bg.setAttribute('material',`shader:flat; color:${pbc}; transparent:true; opacity:0.9; side:double; depthTest:false`);
     bg.setAttribute('position',`${wn/2} 0 0`);
     const fill=document.createElement('a-plane'); fill.setAttribute('width',0.0001); fill.setAttribute('height',hn);
-    fill.setAttribute('material',`shader:flat; color:${pbf}; transparent:true; opacity:1; side:double`);
+    fill.setAttribute('material',`shader:flat; color:${pbf}; transparent:true; opacity:1; side:double; depthTest:false`);
     fill.setAttribute('position',`0 0 0.001`);
     const knob=document.createElement('a-circle'); knob.setAttribute('radius',hn*0.9/2);
-    knob.setAttribute('material',`shader:flat; color:${pkn}; side:double`); knob.setAttribute('position',`0 0 0.002`);
+    knob.setAttribute('material',`shader:flat; color:${pkn}; side:double; depthTest:false`); knob.setAttribute('position',`0 0 0.002`);
     g.appendChild(bg); g.appendChild(fill); g.appendChild(knob);
     let smooth=0;
     return {group:g, set:(p)=>{ const c=Math.max(0,Math.min(1,p||0)); smooth = smooth*0.85 + c*0.15; const wnow=wn*smooth; fill.setAttribute('width', wnow); fill.setAttribute('position',`${wnow/2} 0 0.001`); knob.setAttribute('position',`${wnow} 0 0.002`);} };
   }
 
-  // ===== construir en el primer anchor detectado =====
-  let built=false, progress=null;
+  // -------- Build en el primer anchor detectado --------
+  let built=false, progress=null, audioEl=null, userApproved=false, targetVisible=false;
+  if(audioSrc){ audioEl=new Audio(audioSrc); audioEl.crossOrigin='anonymous'; audioEl.preload='auto'; audioEl.loop=false; }
+
   const anchors=[...Array(8)].map((_,i)=>document.getElementById('a'+i)).filter(Boolean);
 
   function buildInto(anchor){
     if(built) return; built=true;
     const root=makeRoot(); anchor.appendChild(root); root.emit('pop',null,false);
-    const overlay=buildOverlay(); root.appendChild(overlay); if(d && !overlayDebug) overlay.emit('show',null,false);
-    vSlots.forEach(s=>{ const plane=buildVideoPlane(s); root.appendChild(plane); plane.emit('pop',null,false); });
-    tSlots.forEach(s=>{ const tp=buildTextPlane(s); root.appendChild(tp); tp.emit('show',null,false); });
-    if(audioEl){ progress = buildProgress(pbx,pby,pbw,pbh,pbc,pbf,pkn); root.appendChild(progress.group); }
+    const overlay=buildOverlay(); root.appendChild(overlay);
+    vSlots.forEach(s=>{ const vp=buildVideoPlane(s); root.appendChild(vp); });
+    tSlots.forEach(s=>{ const tp=buildTextPlane(s); root.appendChild(tp); });
+
+    if(audioEl){ progress=buildProgress(pbx,pby,pbw,pbh,pbc,pbf,pkn); root.appendChild(progress.group); }
   }
 
   function tryStartAudio(){
@@ -236,20 +238,24 @@
     a.addEventListener('targetFound', ()=>{
       targetVisible=true;
       if(!built) buildInto(a);
-      Object.values(videoEls).forEach(v=>v && v.play && v.play().catch(()=>{}));
+      Object.values(videos).forEach(v=>v && v.play && v.play().catch(()=>{}));
       tryStartAudio();
       log('TARGET FOUND idx '+i,'ok');
     });
     a.addEventListener('targetLost', ()=>{
       targetVisible=false;
-      Object.values(videoEls).forEach(v=>v && v.pause && v.pause());
+      Object.values(videos).forEach(v=>v && v.pause && v.pause());
       if(audioEl) audioEl.pause();
       if(audioEl && userApproved) btnSound.hidden=false;
       log('Perdido idx '+i,'warn');
     });
   });
 
-  // Asegurar cámara en cover y canvas delante
+  // Progreso del audio
+  function tick(){ if(audioEl && progress && audioEl.duration>0){ progress.set(audioEl.currentTime / audioEl.duration); } requestAnimationFrame(tick); }
+  requestAnimationFrame(tick);
+
+  // Asegurar cámara en cover + canvas delante
   const mo=new MutationObserver(()=>{
     document.querySelectorAll('video').forEach(v=>{
       if(v.srcObject instanceof MediaStream){
@@ -261,15 +267,9 @@
   });
   mo.observe(document.documentElement,{subtree:true,childList:true});
 
-  // progreso audio
-  function tick(){ if(audioEl && progress && audioEl.duration>0){ progress.set(audioEl.currentTime / audioEl.duration); } requestAnimationFrame(tick); }
-  requestAnimationFrame(tick);
-
   scene.addEventListener('arReady', ()=>log('Cámara OK','ok'));
   scene.addEventListener('arError', e=>log('Error cámara/permisos '+(e?.detail||''),'err'));
-
-  // Primer toque: habilitar vídeos si el navegador lo exige
-  window.addEventListener('touchend', ()=>{ Object.values(videoEls).forEach(v=>v && v.play && v.play().catch(()=>{})); }, {once:true,passive:true});
+  window.addEventListener('touchend', ()=>{ Object.values(videos).forEach(v=>v && v.play && v.play().catch(()=>{})); }, {once:true,passive:true});
 })();
 </script>
 </body>
