--- a/index.html
+++ b/index.html
@@ -8,13 +8,20 @@
 <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
 <style>
   html,body{margin:0;height:100%;background:#000}
-  video[playsinline]{position:fixed!important;inset:0!important;width:100vw!important;height:100vh!important;object-fit:cover!important;z-index:0!important;background:#000!important}
+  /* Cámara detrás */
+  video[playsinline]{
+    position:fixed!important;inset:0!important;width:100vw!important;height:100vh!important;
+    object-fit:cover!important;z-index:0!important;background:#000!important
+  }
+  /* WebGL delante (interactivo) */
   a-scene{position:fixed!important;inset:0!important;z-index:3!important;pointer-events:auto!important}
   canvas.a-canvas{position:fixed!important;inset:0!important;z-index:4!important;pointer-events:auto!important}
+
+  /* UI */
   .ui{position:fixed;left:8px;top:8px;display:flex;gap:8px;z-index:9}
   .btn{border:1px solid #2a3a58;background:#0f1522;color:#eaf2ff;border-radius:10px;padding:8px 10px}
   .dbg{position:fixed;right:8px;top:8px;background:#0f1522cc;border:1px solid #22324d;border-radius:8px;
-       padding:8px 10px;color:#cfe3ff;font:12px/1.3 system-ui;z-index:8;pointer-events:none;opacity:.15;transition:opacity .35s}
+       padding:8px 10px;color:#cfe3ff;font:12px/1.3 system-ui;z-index:8;pointer-events:none;opacity:.2;transition:opacity .35s}
   .dbg:hover{opacity:1}
   .cal{position:fixed;left:8px;bottom:8px;display:flex;gap:6px;flex-wrap:wrap;z-index:9}
   .chip{background:#0f1522;border:1px solid #2a3a58;color:#eaf2ff;border-radius:10px;padding:6px 8px}
@@ -27,6 +34,7 @@
 </div>
 <div id="dbg" class="dbg">Cargando…</div>
 
+<!-- Controles de calibración (ocultos por defecto, muestra con ?cal=1) -->
 <div class="cal" id="cal" style="display:none">
   <button data-a="dx-" class="btn">X−</button><button data-a="dx+" class="btn">X+</button>
   <button data-a="dy-" class="btn">Y−</button><button data-a="dy+" class="btn">Y+</button>
@@ -47,6 +55,7 @@
     <video id="v1" playsinline webkit-playsinline muted autoplay loop preload="auto" crossorigin="anonymous"></video>
   </a-assets>
 
+  <!-- Cursor para hacer click en elementos 3D -->
   <a-camera id="cam" look-controls="enabled:false">
     <a-entity cursor="rayOrigin: mouse" raycaster="objects: .ui3d; far: 3"></a-entity>
   </a-camera>
@@ -56,25 +65,59 @@
 
 <script>
 (async function(){
-  const qs = new URLSearchParams(location.search);
+  const qs  = new URLSearchParams(location.search);
   const dbg = document.getElementById('dbg');
   const say = m => { dbg.textContent = m + ' · ' + new Date().toLocaleTimeString(); console.log('[AR]',m); };
 
-  // 1) Carga de CFG (obligatorio cfg=URL)
-  const cfgUrl = qs.get('cfg');
-  if(!cfgUrl){ say('❗ Falta ?cfg=URL_AL_JSON'); alert('Falta ?cfg=URL_AL_JSON'); return; }
-  let CFG;
-  try{
-    const r = await fetch(cfgUrl, {mode:'cors', cache:'no-store'});
-    CFG = await r.json();
-  }catch(e){ say('No pude cargar el cfg'); alert('No pude cargar el cfg'); return; }
+  /* ================= DEFAULTS de seguridad ================= */
+  const DEFAULTS = {
+    target: 'https://res.cloudinary.com/dtge9nklw/raw/upload/v1759401459/targets_12_j14r8e.mind',
+    video:  'https://res.cloudinary.com/dtge9nklw/video/upload/f_mp4,vc_h264,ac_aac,br_1200k,vs_30,w_1280/v1759311664/0_Couple_Beach_3840x2160_fgnn6o.mp4',
+    audio:  'https://res.cloudinary.com/dtge9nklw/video/upload/v1759311992/ssvid.app--Ed-Sheeran-Shape-of-You-Lyrics_vyw046.mp3',
+    title:  'Shape of You',
+    artist: 'Ed Sheeran',
+    colors: { title:'#000000', artist:'#000000', wave1:'#13d77a', wave2:'#ffd54a' },
+    pw:2481, ph:3508,
+    slotVid:   {x:296, y:316,  w:1890, h:1682},
+    slotTitle: {x:200, y:2150, w:2080, h:200},
+    slotArtist:{x:200, y:2330, w:2080, h:160},
+    slotBar:   {x:300, y:2640, w:2060, h:26},
+    slotPlay:  {x:1050, y:2920, w:380,  h:380},
+    cal:{dx:-30, dy:432, scale:1.185, rot:-0.2},
+    autoplay:true, parallax:false, showCal:false
+  };
 
+  /* ================= Carga CFG (con fallback) ================= */
+  async function loadCfg(){
+    let cfg = {...DEFAULTS};
+    const cfgUrl = qs.get('cfg');
+    if(!cfgUrl){
+      say('Modo DEMO: sin ?cfg= — usando DEFAULTS');
+      return cfg;
+    }
+    try{
+      const r = await fetch(cfgUrl, {mode:'cors', cache:'no-store'});
+      if(!r.ok) throw new Error('HTTP '+r.status);
+      const json = await r.json();
+      // Mezcla profunda mínima
+      cfg = {...cfg, ...json, colors:{...cfg.colors, ...(json.colors||{})}};
+      say('CFG cargado OK');
+    }catch(e){
+      say('⚠️ No pude cargar el cfg, uso DEFAULTS');
+    }
+    return cfg;
+  }
+  const CFG = await loadCfg();
+
+  /* ================= A-Frame / MindAR ================= */
   const scene=document.getElementById('scene');
   scene.setAttribute('mindar-image', `imageTargetSrc:${CFG.target}; uiLoading: yes; autoStart:false; maxTrack:1; warmupTolerance:2; filterMinCF:0.0001; filterBeta:0.006;`);
 
-  // Cámara en cover detrás
+  // Cámara en cover (vídeo del stream)
   new MutationObserver(()=>{ document.querySelectorAll('video').forEach(v=>{
-    if(v.srcObject instanceof MediaStream){ Object.assign(v.style,{objectFit:'cover',position:'fixed',inset:'0',width:'100vw',height:'100vh',zIndex:'0'}); }
+    if(v.srcObject instanceof MediaStream){
+      Object.assign(v.style,{objectFit:'cover',position:'fixed',inset:'0',width:'100vw',height:'100vh',zIndex:'0',background:'#000'});
+    }
   });}).observe(document.documentElement,{subtree:true,childList:true});
 
   const PW=CFG.pw||2481, PH=CFG.ph||3508, H=PH/PW;
@@ -89,11 +132,12 @@
     root.setAttribute('position', `${(cal.dx||0)/PW} ${-(cal.dy||0)/PW} 0`);
     root.setAttribute('scale', `${cal.scale||1} ${cal.scale||1} 1`);
     root.setAttribute('rotation', `0 0 ${cal.rot||0}`);
-    document.getElementById('readout').textContent = `dx:${Math.round(cal.dx||0)} dy:${Math.round(cal.dy||0)} scale:${(cal.scale||1).toFixed(3)} rot:${(cal.rot||0)}`;
+    document.getElementById('readout').textContent =
+      `dx:${Math.round(cal.dx||0)} dy:${Math.round(cal.dy||0)} scale:${(cal.scale||1).toFixed(3)} rot:${(cal.rot||0)}`;
   }
   applyCal();
 
-  // Vignette sutil
+  // Vignette
   const vignette=document.createElement('a-plane');
   vignette.setAttribute('width', 1.14);
   vignette.setAttribute('height', H*1.14);
@@ -101,7 +145,7 @@
   vignette.setAttribute('material','shader:flat; color:#000; opacity:.20; transparent:true; side:double; depthTest:false');
   root.appendChild(vignette);
 
-  /* ====== VÍDEO ====== */
+  /* ================= VÍDEO ================= */
   const v1=document.getElementById('v1'); v1.src = CFG.video||'';
   const vslot = CFG.slotVid;
   const u = px2(vslot.x,vslot.y,vslot.w,vslot.h);
@@ -122,7 +166,7 @@
   vPlane.addEventListener('materialtextureloaded', setCover);
   v1.addEventListener('loadedmetadata', ()=>{ v1.play().catch(()=>{}); setCover(); }, {once:true});
 
-  /* ====== CANVAS OVERLAY (títulos + barra/wave) ====== */
+  /* ================= CANVAS OVERLAY (títulos + barra/wave) ================= */
   const Cw = 2048, Ch = Math.round(Cw*H);
   const canvas = document.createElement('canvas'); canvas.width=Cw; canvas.height=Ch;
   const ctx = canvas.getContext('2d');
@@ -131,31 +175,60 @@
   overlayP.setAttribute('position','0 0 0.02');
   overlayP.setAttribute('material','shader:flat; transparent:true; side:double; depthTest:false; opacity:1');
   root.appendChild(overlayP);
-  overlayP.addEventListener('loaded', ()=>{ const tex = new AFRAME.THREE.CanvasTexture(canvas); tex.needsUpdate = true; const mesh = overlayP.getObject3D('mesh'); mesh.material.map = tex; mesh.material.needsUpdate = true; overlayP.__tex = tex; });
+  overlayP.addEventListener('loaded', ()=>{
+    const tex = new AFRAME.THREE.CanvasTexture(canvas);
+    tex.needsUpdate = true;
+    const mesh = overlayP.getObject3D('mesh');
+    mesh.material.map = tex; mesh.material.needsUpdate = true;
+    overlayP.__tex = tex;
+  });
 
   const titleSlot = CFG.slotTitle, artistSlot = CFG.slotArtist, barSlot = CFG.slotBar;
   function fitFontFor(text, wpx, hpx, weight){
     let lo=12, hi=Math.floor(hpx*0.92), best=Math.floor(hpx*0.74);
-    while(lo<=hi){ const mid=(lo+hi>>1); ctx.font = `${weight||700} ${mid}px system-ui,Segoe UI,Roboto`; if(ctx.measureText(text).width <= wpx*0.94){ best=mid; lo=mid+1; } else hi=mid-1; }
+    while(lo<=hi){ const mid=(lo+hi>>1);
+      ctx.font = `${weight||700} ${mid}px system-ui,Segoe UI,Roboto`;
+      if(ctx.measureText(text).width <= wpx*0.94){ best=mid; lo=mid+1; } else hi=mid-1;
+    }
     return best;
   }
-  const titlePx = fitFontFor(CFG.title||'', titleSlot.w*Cw/PW, titleSlot.h*Ch/PH, 800);
+  const titlePx = fitFontFor(CFG.title||'', titleSlot.w*Cw/PW,   titleSlot.h*Ch/PH, 800);
   const artistPx= fitFontFor(CFG.artist||'',artistSlot.w*Cw/PW, artistSlot.h*Ch/PH, 600);
 
-  /* ====== AUDIO / UI ====== */
+  /* ================= AUDIO / UI ================= */
   const btnStart=document.getElementById('btnStart');
   const btnAudio=document.getElementById('btnAudio');
-  let audio=null, acx=null, analyser=null, userGesture=false, lastBeat=0;
+  let audio=null, acx=null, analyser=null, lastBeat=0;
   const bars=48;
 
   function setupAudio(){
     if(audio) return;
     audio = new Audio(CFG.audio||''); audio.crossOrigin='anonymous'; audio.preload='auto';
-    try{ const AC=window.AudioContext||window.webkitAudioContext; acx=new AC(); analyser=acx.createAnalyser(); analyser.fftSize=64; const src=acx.createMediaElementSource(audio); src.connect(analyser); analyser.connect(acx.destination); }catch(e){}
+    try{
+      const AC=window.AudioContext||window.webkitAudioContext;
+      acx=new AC(); analyser=acx.createAnalyser(); analyser.fftSize = 64;
+      const src=acx.createMediaElementSource(audio);
+      src.connect(analyser); analyser.connect(acx.destination);
+    }catch(e){ /* sin WebAudio también funciona */ }
   }
-  btnAudio.onclick=async()=>{ userGesture=true; setupAudio(); try{ if(audio.paused){ acx && acx.state==='suspended' && await acx.resume(); await audio.play(); btnAudio.textContent='⏸ Audio'; } else { audio.pause(); btnAudio.textContent='▶️ Audio'; } }catch{} };
 
-  // Botón play/pause en 3D (área clicable invisible, opcional)
+  btnAudio.onclick = async () => {
+    setupAudio();
+    try{
+      if(audio.paused){
+        if(acx && acx.state==='suspended') await acx.resume();
+        await audio.play();
+        btnAudio.textContent='⏸ Audio';
+      }else{
+        audio.pause();
+        btnAudio.textContent='▶️ Audio';
+      }
+    }catch(e){
+      say('⚠️ No se pudo reproducir audio (se necesita gesto de usuario)');
+    }
+  };
+
+  // Área de play/pause 3D (opcional, invisible)
   if(CFG.slotPlay){
     const pb=px2(CFG.slotPlay.x,CFG.slotPlay.y,CFG.slotPlay.w,CFG.slotPlay.h);
     const playBtn = document.createElement('a-circle');
@@ -166,16 +239,16 @@
     playBtn.setAttribute('animation__tap','property:scale; from:0.95 0.95 1; to:1 1 1; dur:120; easing:easeOutQuad');
     root.appendChild(playBtn);
     playBtn.addEventListener('click', async()=>{
-      userGesture=true; setupAudio();
+      setupAudio();
       try{
         if(audio.paused){ acx && acx.state==='suspended' && await acx.resume(); await audio.play(); btnAudio.textContent='⏸ Audio'; }
         else { audio.pause(); btnAudio.textContent='▶️ Audio'; }
-        playBtn.emit('animation__tap'); if(navigator.vibrate) navigator.vibrate(15);
+        playBtn.emit('animation__tap'); navigator.vibrate?.(15);
       }catch(e){}
     });
   }
 
-  /* ====== DIBUJO (textos + barra + waveform) ====== */
+  /* ================= DIBUJO (textos + barra + waveform) ================= */
   const waveTopHeight = Math.round(34*Cw/2048), waveGap = Math.round(22*Cw/2048);
   function mmss(t){ if(!isFinite(t)||t<0) t=0; const m=Math.floor(t/60), s=Math.floor(t%60); return `${m}:${s.toString().padStart(2,'0')}`; }
 
@@ -213,26 +286,28 @@
 
     // Knob + tiempos
     const kx=pbx+fw, ky=pby+pbh/2, r=Math.max(3, Math.round(pbh*0.9/2));
-    const pulse=1+0.10*Math.sin(performance.now()/220); ctx.beginPath(); ctx.arc(kx,ky,r*pulse,0,Math.PI*2); ctx.fillStyle='#000'; ctx.fill();
+    const pulse=1+0.10*Math.sin(performance.now()/220);
+    ctx.beginPath(); ctx.arc(kx,ky,r*pulse,0,Math.PI*2); ctx.fillStyle='#000'; ctx.fill();
+
     ctx.fillStyle='#000'; ctx.textBaseline='alphabetic'; ctx.textAlign='left';
     ctx.font = `700 ${Math.round(28*Cw/2048)}px system-ui,Segoe UI,Roboto`;
     ctx.fillText(cur, pbx, pby - 10);
     ctx.textAlign='right'; ctx.fillText(dur, pbx+pbw, pby - 10);
 
-    // Waveform doble
-    const arr = (analyser? (new Uint8Array(analyser.frequencyBinCount)) : null);
-    if(arr) analyser.getByteFrequencyData(arr);
-    const step=pbw/(CFG.waveBars||48);
-    const byTop = pby - waveGap, byBot = pby + pbh + waveGap;
+    // Waveform doble (si hay analyser, real; si no, animación fake)
+    let arr = null;
+    if(analyser){ arr = new Uint8Array(analyser.frequencyBinCount); analyser.getByteFrequencyData(arr); }
+    const bars = CFG.waveBars || 48;
+    const step=pbw/bars, byTop = pby - waveGap, byBot = pby + pbh + waveGap;
     let level=0;
     ctx.save();
     for(let pass=0; pass<2; pass++){
       const baseY = (pass===0? byTop : byBot);
       const mirror = (pass===1);
-      for(let i=0;i<(CFG.waveBars||48);i++){
+      for(let i=0;i<bars;i++){
         let v = 0.25 + 0.75*Math.abs(Math.sin((performance.now()/260)+(i*0.37)));
         if(arr){ v = (arr[2+i]||0)/255; level+=v; }
-        const h = Math.max(4, Math.round(v*waveTopHeight));
+        const h = Math.max(4, Math.round(v*Math.round(34*Cw/2048)));
         const x = Math.round(pbx + i*step + step*0.18);
         const w = Math.max(2, Math.round(step*0.64));
         ctx.fillStyle = (pass===0? (CFG.colors?.wave1||'#13d77a') : (CFG.colors?.wave2||'#ffd54a'));
@@ -240,26 +315,14 @@
       }
     }
     ctx.restore();
-    if(arr){ level/= (CFG.waveBars||48); const now=performance.now(); if(level>0.52 && now-lastBeat>200){ lastBeat=now; particles('#ffd54a',8); } }
+    if(arr){ level/=bars; const now=performance.now(); if(level>0.52 && now-lastBeat>200){ lastBeat=now; /* aquí podrías lanzar partículas si quieres */ } }
 
     overlayP.__tex && (overlayP.__tex.needsUpdate = true);
     requestAnimationFrame(draw);
   }
   requestAnimationFrame(draw);
 
-  function particles(color='#13d77a', count=8){
-    for(let i=0;i<count;i++){
-      const p=document.createElement('a-circle');
-      p.setAttribute('radius', 0.006 + Math.random()*0.012);
-      p.setAttribute('material',`shader:flat; color:${color}; transparent:true; opacity:0.95; side:double; depthTest:false`);
-      p.setAttribute('position', `${(Math.random()-0.5)*0.28} ${-H*0.18 + Math.random()*0.12} 0.18`);
-      const dy = 0.22 + Math.random()*0.25, dx = (Math.random()-0.5)*0.25, dur = 900 + Math.random()*600;
-      p.setAttribute('animation__move', `property:position; to:${dx} ${-H*0.18+dy} 0.18; dur:${dur}; easing:easeOutQuad`);
-      p.setAttribute('animation__fade', `property:material.opacity; from:0.95; to:0; dur:${dur}; easing:linear`);
-      root.appendChild(p); setTimeout(()=>p.remove(), dur+80);
-    }
-  }
-
+  // Micro Ken-Burns en el vídeo
   function kenBurns(){
     const B=vPlane.__base; if(!B) return;
     const dx=(Math.sin(performance.now()/6000)*0.015)*B.rx, dy=(Math.cos(performance.now()/9000)*0.015)*B.ry;
@@ -283,7 +346,8 @@
     })();
   }
 
-  // Estados / UI
+  /* ================= Estados / UI ================= */
+  // Mostrar calibración si ?cal=1
   document.getElementById('cal').style.display = (qs.get('cal')==='1' ? 'block' : 'none');
   document.querySelectorAll('#cal [data-a]').forEach(b=>{
     b.onclick=()=>{
@@ -311,14 +375,36 @@
       const sys=scene.systems['mindar-image-system']; const comp=scene.components['mindar-image'];
       if(sys && sys.start) await sys.start(); else if(comp && comp.start) await comp.start();
       btnStart.disabled=true; btnStart.textContent='Cámara lista';
-      if(CFG.autoplay){ setupAudio(); try{ acx && acx.state==='suspended' && await acx.resume(); await audio.play(); document.getElementById('btnAudio').textContent='⏸ Audio'; }catch{} }
-    }catch{ say('No se pudo iniciar cámara'); }
+      // habilita el botón de audio ya aquí (además de en targetFound)
+      document.getElementById('btnAudio').disabled=false;
+      // Autoplay tras gesto del usuario
+      if(CFG.autoplay){
+        setupAudio();
+        try{
+          if(acx && acx.state==='suspended') await acx.resume();
+          await audio.play();
+          document.getElementById('btnAudio').textContent='⏸ Audio';
+        }catch(e){ say('Autoplay bloqueado; toca ⏯ Audio'); }
+      }
+      say('Cámara iniciada');
+    }catch{
+      say('No se pudo iniciar cámara');
+    }
   };
 
-  anchor.addEventListener('targetFound', ()=>{ root.emit('pop',null,false); v1.play().catch(()=>{}); document.getElementById('btnAudio').disabled=false; say('Target FOUND'); });
-  anchor.addEventListener('targetLost',  ()=>{ v1.pause(); audio?.pause(); document.getElementById('btnAudio').textContent='▶️ Audio'; say('Target LOST…'); });
+  anchor.addEventListener('targetFound', ()=>{
+    root.emit('pop',null,false);
+    v1.play().catch(()=>{});
+    document.getElementById('btnAudio').disabled=false;
+    say('Target FOUND');
+  });
+  anchor.addEventListener('targetLost',  ()=>{
+    v1.pause(); audio?.pause();
+    document.getElementById('btnAudio').textContent='▶️ Audio';
+    say('Target LOST…');
+  });
 
-  // Gesto global de seguridad
+  // Gesto global de seguridad (iOS): primer tap → iniciar cámara
   window.addEventListener('pointerup', ()=>btnStart.click(), {once:true,passive:true});
 })();
 </script>
